--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test-coverage": "jest --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -23,8 +25,15 @@
     "react-i18next": "^14.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@testing-library/jest-dom": "^6.3.0",
+    "@testing-library/react": "^14.1.2",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.70.0"
   }
 }
